[package]
name = "prometheus-fire"
description = "Thin prometheus wrapper to simplify metrics exposure"
authors = ["Konstantin Stepanov <me@kstep.me>"]
keywords = ["prometheus", "metrics", "helper"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["server", "tcp", "http1"], optional = true }
jsonrpc-derive = { version = "18", optional = true }
jsonrpc-core = { version = "18", optional = true }
jsonrpsee = { version = "0.14", optional = true, features = ["macros", "http-server"] }
lazy_static = "1.4.0"
log = "0.4"
prometheus = "0.13"
prometheus-fire-derive = { optional = true, path = "../derive" }

[features]
derive = ["prometheus-fire-derive"]
server = ["hyper"]
jsonrpc = ["derive", "jsonrpc-derive", "jsonrpc-core", "prometheus-fire-derive/jsonrpc"]
jsonrpsee = ["prometheus-fire-derive/jsonrpsee", "dep:jsonrpsee"]
default = ["derive"]
